--- a/bloglist-frontend/src/App.css
+++ b/bloglist-frontend/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.blog-row {
+  border: solid black 2px;
+  border-radius: 5px;
+  display: flex;
+  margin: 10px;
+  padding: 5px;
+}
