--- a/bloglist-frontend/src/components/styles/Navbar.css
+++ b/bloglist-frontend/src/components/styles/Navbar.css
@@ -1,4 +1,15 @@
-.navbar {
-  background-color: cornflowerblue;
-  display: block;
+.navbar-link {
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.navbar-link:hover {
+  color: rgb(22, 61, 179);
+  background-color: white;
+}
+
+.navbar-login {
+  flex: 1;
+  justify-content: center;
 }
